bad/invalid_cast_type_string.example_compiler_output
ERROR
[1mbad/invalid_cast_type_string.lat:3:12: [1;31merror: [0;1msyntax error at )[m
    (string)null == null;
           [1;32m^[m
